American or British?

--- a/Great Britain.page
+++ b/Great Britain.page
@@ -23,3 +23,4 @@
     - BW3:121: Gore replies that the two men were known to be British subjects when they signed on the *Philadelphia*, and thus having returned to a British vessel they will not and cannot be restored to the Americans; he further asserts that an additional two men from the *Philadelphia* are also British subjects and asks that they be discharged to his ship (9 October 1803)
     - BW3:121: Stewart responds that he has no authority to discharge anyone
     - BW3:121: Stewart solicits the advice of [Edward Preble]() on the matter (9 October 1803)
+    - BW3:127: [Ralph Izard]() gets to the heart of the matter: "It appears to me a matter of impossibility to draw a proper line of distinction, by which we may know an American from a British Seaman." (11 October 1803)
