Dey to Jefferson

--- a/Relations with Algiers.page
+++ b/Relations with Algiers.page
@@ -7,6 +7,7 @@
 -   Possibly because of French ties or sympathy for more egalitarian form of government? See IAN COLLER, “Barbary and Revolution: France and North Africa, 1789-1798,” in French Mediterraneans, Transnational and Imperial Histories (University of Nebraska Press, 2016), 67-69, http://www.jstor.org/stable/j.ctt1d8h8t4.7.
 
 
+## Negotiations
 - BW1:451-52: [Richard O'Brien]() writes to SecState that the USA is "two &c a half Years in arrears in the Annuities we are threatened with war if The Stores does not arrive Shortly" (12 May 1801)
 
 - BW2:212: SecState sends to [James Leander Cathcart]() $30,000, whihc he hopes Algiers will accept in lieu of $30,000 worth of stores, and he requests Cathcart try to negotiate for money instead of stores as payment henceforth (27 July 1802)
@@ -23,3 +24,4 @@
 - BW2:380: [James Leander Cathcart]() sees [Richard O'Brien]() as part of the reason the negotiations with Algiers aren't going well: "so long as we continue to acquiesce in every demand of that Regency that he is the most proper person to remam there, lt may cost us a few thousand dollars per annum more than is necessary to maintain our peace, but we shall be under no apprehensions from his energy or sense of national dignity for he is literally the echo of the Jewish Sanhedrin who are the Creatures of the Dey" (30 March 1803)
 - BW2:406: SecNav orders Daniel Bedinger to take timber from the 74 that's being built in order to pay Algiers the timber they want (14 May 1803)
 - BW2:483: SecNav gives orders to [Tobias Lear]() about how to negotiate with Algiers, including how to determine when and what the presents must be (14 July 1803)
+- BW3:132: The dey of Algiers writes to Thomas Jefferson demanding 10 24-pounder guns plus carriages, and 5 18-pounders with carriages; [Richard O'Brien]() had refused, apparently, to write making this demand, so the dey went directly to the source; in return, the dey promised, "[I] request for our friendship and our treaty That you will not write me evasive to my demand - as any favour demanded on your part I shall comply therewith. whether your demand is great or small" (14 October 1803)
