--- a/Great Britain.page
+++ b/Great Britain.page
@@ -24,3 +24,4 @@
     - BW3:121: Stewart responds that he has no authority to discharge anyone
     - BW3:121: Stewart solicits the advice of [Edward Preble]() on the matter (9 October 1803)
     - BW3:127: [Ralph Izard]() gets to the heart of the matter: "It appears to me a matter of impossibility to draw a proper line of distinction, by which we may know an American from a British Seaman." (11 October 1803)
+    - BW3:133-34: [Joseph Tarbell](), commander of the prize ship *Mirboka*, writes an account of how they trailed the deserters to the *Medusa*
