--- a/Convoy.page
+++ b/Convoy.page
@@ -73,4 +73,5 @@ what is worse, Slavery", 15 July 1802
     - M148: [Charles Stewart]() takes 6 vessels under convoy from Gibraltar, October 1803
     - Cargoes include brandies, wine, and fruit
     - Destinations include New York, London, Alexandria, and Salem
+- BW3:137: [Charles Stewart]() and the [USS *Siren*]() convoy seven vessels through Gibraltar, carrying coffee, sugars, flour, pepper, and fish (15 October 1803)
 - M148: 4 January 1804: [USS *Argus*]() convoys 2 ships from Leghorn to Gibraltar (Letter from Isaac Hull to SecNav (Robert Smith). 26 January 1804)
