--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -87,6 +87,7 @@
 - BW3:99: [Tobias Lear]() announces that [James Simpson]() has been freed from his captivity and all is well with Morocco (3 October 1803)
 - BW3:107: [Edward Preble]() notes the presence of 7 foreign flags including the American one at Tangier (5 October 1803)
 - BW3:111: The emperor sends the squadron a gift of 10 bullocks, 20 sheep, and 4 dozen fowls (7 October 1803)
+    - BW3:150: [Tobias Lear]() records that on 11 October, the emperor sent another 20 bullocks, 50 sheep, and 100 dozen fowls, "which was a very extraordinary supply" 
 - BW3:115: [James Simpson]() encourages [Edward Preble]() to offer the [*Mirboka*]() in exchange for the [*Hannah*]() and any other American prisoners, suggesting he'd get the better end of the deal because the *Mirboka* is a piece of junk (8 October 1803)
 - BW3:118: Emperor of Morocco sets American ships and crews at liberty and declares peace to be restored, 8 October 1803
 - BW3:119: [Edward Preble]() responds to Simpson's arguments by agreeing and releasing both the *Mirboka* and the *Meshouda* (8 OCtober 1803)
