--- a/Science.page
+++ b/Science.page
@@ -31,6 +31,7 @@
 
 ## Disease in Mediterranean ports
 - BW3:151: [Tobias Lear]() notes that "a yellow fever of a very malignant nature had appeared at Malaga; in consequence of which all communication with that place & other Ports of Spain was cut off - and adviseing against having any communication with Vessels from there." (13 October 1803) 
+    - [Anthony Terry]() writes to SecState that the disease has not spread past Malaga to Cadiz, so please to not stop trading in Cadiz (BW3:159-60, 22 October 1803)
 
 ## [Dealing with disease]()
     
