--- a/Where to get water.page
+++ b/Where to get water.page
@@ -11,5 +11,7 @@
     
 - BW1:573: [USS *Philadelphia*]() and [USS *Essex*]() able to obtain water in Malaga after only a few hours waiting for pratique, 8 September 1801
 
+- BW3:161: [Edward Preble]() writes of the difficulty of watering: "In consequence of the Yellow Fever at Malaga all communication is cut off between Gibraltar and the Spanish Territories near it. This prevents us from watering at Algeciras, or the watering place without the Rocks; and the scarcity at Gibraltar, and number of British to be supplied, rendering it impossible for us to water there, induced me to come to Cadiz with the Constitution & Enterprize; to fill up our water, and to procure a Stream Cable in lieu of the one we lost in Tanger Bay; & a Bower Cable in lieu of an old one which we have twice parted and has occasioned the irrecoverable loss of one Anchor which I shall also have to replace here" (23 October 1803)
+
 ## At home
 - BW2:27: Secretary of the Navy tells the commander of [USS *Chesapeake*]() that the ships have been taking on too much water and not enough provisions, so they should take only 10 weeks of water when they leave the USA, 22 January 1802
