provisions sent to Syracuse

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -56,6 +56,9 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 8 November 1803: *William and Mary*
     - 10 January 1804: *Woodrop Sims*
 - War in Europe disrupts supply from Med: [Edward Preble]() notes: "It is absolutely necessary that every Article which composes our ration's should be sent out from the United States as they cannot, in consequence of the War between England and France be purchased at Gibralter and even if they could the prices at present are 50 pr Cent higher than in time of peace; Candles and Molasses have heretofore been much wanted by the other squadron, they are articles that cannot be procured, on any terms in this Country" (BW3:58, 18 September 1803) 
+- [Edward Preble]() writes of the need for supplies: "All the Provisions that the Squadron have on board, and all on hand at Gibraltar, will be expende Yadmn by the first of April next. If a supply does not arrive from the United States by that time, it will distress me very much; as it will retard my operations against Tripoli, by obliging me to seek the provisions at the season most proper to act with effect on the Tripoline Coast. If our Provisions could be sent out in a good sailing Ship of about Four hundred Tons, armed with Guns & Men sufficient to protect her, and directed to proceed immediately to Syracuse, it would in my opinion reach us with more certainty in less time and at Iess
+expence to the Government than if shipped to Gibraltar; and reshiped
+from thence" (23 October 1803, BW3:161)
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
