--- a/Humphreys’ Poem.page
+++ b/Humphreys’ Poem.page
@@ -1,7 +1,7 @@
-How long, Columbians dear! will ye complain
-OF wrongs unpunish'd on the midland main?
-In timid sloth shall injur'd brav'ry sleep?
-Awake! awake! avengers of the deep!
+How long, Columbians dear! will ye complain  return
+OF wrongs unpunish'd on the midland main?  return
+In timid sloth shall injur'd brav'ry sleep?  return
+Awake! awake! avengers of the deep!  return
 Revenge! revenge! the voice of nature cries;
 Awake to glory, and to vengeance rise!
 To arms! to arms! ye bold, indignant bands!
