--- a/Weather.page
+++ b/Weather.page
@@ -30,6 +30,8 @@ seamen went overboard with the rigging & were lost." (See also [Physical acciden
 - BW3:86: [Edward Preble]() provides assistance to an English brig, HMS Childers, a dispatch ship for England with letters from Lord Nelson, when a sudden squall carried away its topmasts (21 September 1803)
 - BW3:97: Weather has effects on land as well: [James Simpson]() records the emperor's difficulty in getting back to Tangier: "The excessive bad Weather has delayed his Journey exceedingly, on Friday my Express found him encamped at a short distance on the other side of Alcassar River, and Hashash on this side of it, but their communication perfectly cut off the River being im assable, but on Rafts supported by Goat Skins filled with Wind." (2 October 1803) 
 - BW3:162: [Edward Preble]() notes the dual concern of being short-handed and dealing with foul weather: "I am now 40 Able & 9 Ordinary Seamen short of the complement allowed; which makes it necessary to call all hands so often in stormy weather and we have had no other since we came on the Station that duty has been very hard and fatigueing" (23 October 1803)
+BW3:307: [Charles Stewart]() records storms the *Siren* was caught in: "a severe Gale of Wind came on, with a tremendous Sea, that hove the Syren, on her Beam Ends, and filled her waist full of Water. We got her before the Wind, Knocked out some of the Ports, and freed her Decks. The Jolly Boat was stove to Atoms, & lost. Nothing but Strong Gales from the Westward, with heavy Squalls (that prevented our carrying any Sail, but Storm Stay sails) prevailed from the 2nd of Decemher to the 12th" --29 November 1803
+
 
 
 ## In America
