--- a/Science.page
+++ b/Science.page
@@ -29,6 +29,7 @@
     - BW2:374: SecNav orders [Thomas Tingey]() to remove the sick men from the [USS *Constellation*]() to the [USS *General Greene*]() immediately, and the *General Greene* must then be removed from the vicinity of the other ships so that the ship fever doesn't spread (16 March 1803)
 - BW3:103-4: [William Bainbridge]() on the [USS *Philadelphia*](): "Having from 20 to 30 sick on board, this number with 13 left at Gibralter has reduced the force of our ship considerably, was a powerful reason for me to clear my ship as much as possible before I attempted the bad coast & ill climate of Tripoli" (4 October 1803)
 - BW3:167: 6 sick and 7 convalescent on the [USS *Constitution*]()
+- BW3:307: [Charles Stewart]() records that all of his officers were sick except 2 young midshipmen (December 1803)
 
 ## Disease in Mediterranean ports
 - BW3:151: [Tobias Lear]() notes that "a yellow fever of a very malignant nature had appeared at Malaga; in consequence of which all communication with that place & other Ports of Spain was cut off - and adviseing against having any communication with Vessels from there." (13 October 1803) 
