--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -23,6 +23,11 @@ Accidents to ships or people were no small matter when the squadron was deployed
 - BW3:47: [USS *Philadelphia*]() breaks the pintle of her rudder, 15 September 1803
     - [Edward Preble]() asks Captain Otway, commissioner at Gibraltar, for permission to receive repairs for the Philadelphia at Gibraltar (BW3:51, 16 September 1803)
 - BW3:122: [Charles Stewart]() reports a collision between the [USS *New York*]() and his ship, the [USS *Siren*](): "This morning about 11 OClock the United States Frigate New York Capt Rodgers, hove out a Sigl to speak us with which we complied, but on thier bearing down she ran Aboard of us, and carried away every thing from our bows, even to the Anchor which was broke in two, fortunately no person's was hurt on board the Siren except one man who I fear will loose his hand by the unfortunate circumstance - The New York lost her lower yards and what other damage I do not know" (10 October 1803) 
+- BW3:307: [Charles Stewart]() reports repairs needed to [*Siren*](): "She leaks very much
+in her upper Works, which has damaged some of the provisions, and
+other Articles. I am, therefore, under the necessity of caulking - Her rigging we take this opportunity of overhauling, and also to shift
+her Main Mast further Aft, which it requires, and feel confident
+it will much improve her sailing." (1 January 1804)
 
 
 ### To persons
