--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -84,3 +84,6 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - 30 November 1802: [Daniel Carmick]() thinks that the English and the French may start up hostilities again over Malta, as neither navy wants to give the island up or go home (BW2:327)
 - 5 July 1803: [Edward Preble]() notes that a resumption of hostilities between England and France could be good?: "Certain accounts have been received here of a Declaration of War by England against France- This circumstance while it renders the situation of our Squadron intended for the Mideteranean more interesting, and Delicate, will I presume ensure it, the most respectfull treatment from both the Belligerent powers - as it will be for their interest to keep on good terms with this Government." He also suggests that war is good for recruitment: "The certainty of War increases our Success in recruiting foreign Seamen, as they dare not trust to the protection the Merchant Service affords them, and are sure of being safe from impressment with us" (BW2:468)
 - 21 October 1803: British announce blockade of the ports of Genoa and Spezzia (BW3:157)
+- 
+
+## [Help for the *Philadelphia*]()
