--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -86,4 +86,4 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - 21 October 1803: British announce blockade of the ports of Genoa and Spezzia (BW3:157)
 - 
 
-## [Help for the *Philadelphia*]()
+# [Help for the *Philadelphia*]()
