exchanges for Philadelphia

--- a/Help for the Philadelphia.page
+++ b/Help for the Philadelphia.page
@@ -8,3 +8,5 @@ World that species of Glory, which is I am satisfied dearest to his heart." (2 J
 the interest of France and Italy, which are deeply engaged in the uninterupted
 Commerce of the United States during a War in which
 their view is arrested."
+
+- BW3:310: [Edward Preble]() writes to [William Bainbridge]() that he intends to use the *Mastico*'s crew as exchange for some of the *Philadelphia*'s crew (4 January 1804)
