Behave like Americans

--- a/Honor.page
+++ b/Honor.page
@@ -41,6 +41,7 @@
 - Deceit is dishonorable: [Daniel McNeill]() lies to the quarantine officer at Toulon about where in the Mediterranean he had touched -- "nothing should tempt a man to deviate from the truth in his report to a Health office . . . a deviation from the truth, in a man of the above description tends in some measure to tarnish not only his owne Honor, but that of his Country and brother officers," writes [Richard Dale]() (BW2:28)
 - BW2:306: [William Eaton]() thinks Sweden has sold out by allowing France to broker a treaty for them with Tripoli: "The french Commissary General tells me, "The Swedish Admiral acknowledges that the mediation of the french Embassador at Tripoli has saved his nation a hundred thousand dollars!" He might have added - But the national honor and independence of Sweden are thrown into the scale to balance the obligation!" (22 October 1802) 
 - BW3:110: [James Simpson]() writes that the emperor of Morocco was quite pleased by the American squadron's salute to his arrival, which he viewed "with a stand Tellescope" (7 october 1803)
+- BW3:312: [Edward Preble]() writes to the *Philadelphia* captives to not work as slaves, but rather "persist in your rights of being treated as prisoners and not as Slaves." Also, "Behave like Americans be firm and do not despair the time of your liberation is not far distant." (4 January 1804)
 
 ## Rank and seniority
 
