--- a/Communications.page
+++ b/Communications.page
@@ -40,3 +40,7 @@
 - [William Eaton]() leaked information about the squadron to a courtier he knew would report it to the bey of Tunis, in order to let him know that the squadron was being reinforced and hopefully put him in a more conciliatory frame of mind (BW2:359, 8 February 1803)
 - BW2:514: [James Simpson]() laments that he has not yet heard an answer from [Richard Valentine Morris]() in re: the [*Meshouda*]() affair; "Mr Gavino tells me for want of conveyance my answer to that Letter was long detained at Gibraltar" (15 August 1803)
 - BW3:109: [James Simpson]() notes that translation of papers is itself a political act: " The two Spanish Gentlemen who translate Arabic papers for me being attached to their Consulate, they would not like to be seen taking part so far in our concerns just at this day, as to go on board for the purposes you mention - but if the Tripoline Captain will make a written declaration of what you may tell him by your Interpreter you wish to be proven on any point, I will get it translated." 
+- 
+
+## Communications with the [USS *Philadelphia*]()
+- BW3:346: [William Bainbridge]() writes to [Edward Preble]() noting that he has sent Preble a cypher to allow them to communicate without being detected, but it has been 3 months and Bainbridge has heard nothing (18 January 1804)
