--- a/Communications.page
+++ b/Communications.page
@@ -44,3 +44,6 @@
 
 ## Communications with the [USS *Philadelphia*]()
 - BW3:346: [William Bainbridge]() writes to [Edward Preble]() noting that he has sent Preble a cypher to allow them to communicate without being detected, but it has been 3 months and Bainbridge has heard nothing (18 January 1804)
+    - It is unfortunate these communications were slow and difficult, as Bainbridge was providing valuable tactical information about ships in and out of Tripoli (also demonstrating that the blockade is pretty much dead)
+    - He suggested the destruction of the *Philadelphia*, also gave ideas about the ideal time to do it
+    - He wants American newspapers
