--- a/Front Page.page
+++ b/Front Page.page
@@ -18,6 +18,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Candid opinions about the war]()
 - [Captivity]()
 - [Characteristics of Barbary ships]()
+- [Collaboration]()
 - [Communications]()
 - [Comparisons between USA and others]()
 - [Conduct of naval ships]()
