--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -46,3 +46,4 @@
 # Keeping the peace
 - BW1:394-95: [James Leander Cathcart]() to Charles Lee, sec of state, 1 November 1800: Cathcart petitioned the dey of Algiers to intervene against Tripoli's breaking their treaty with the USA, but does not express much hope that anything will be done
 - BW2:232: SecNav informs [Richard Valentine Morris]() that the [USS *New York*]() is bringing him $20,000-30,000 to be dispensed to whichever Barbary state might need temporary conciliation (13 August 1802)
+- [James Leander Cathcart]() notes that not paying the consular presents at Algiers "would be only throwing away time, and placing difficulties in the Way of obtaining alterations in things of more importance" (29 November 1802, *JM*, http://rotunda.upress.virginia.edu/founders/JSMN-02-91-02-0551 
