England and Algiers

--- a/Encounters between Europe and Barbary.page
+++ b/Encounters between Europe and Barbary.page
@@ -1,3 +1,6 @@
+### England and Algiers
+- [Tobias Lear]() records that the British fleet was off Algiers, where the dey and Lord Nelson had a spirited correspondence, but the fleet left before any points were made (27 January 1804; BW3:369-70)
+
 ### Portugal and Algiers
 - 16 May 1802: An Algerian 44-gun frigate captured a 44-gun Portuguese frigate, killing 72 Portuguese crew; Portuguese frigate captured with little enough damage that it would be incorporated into the Algerian fleet (BW2:155-56)
 
