--- a/Strategy.page
+++ b/Strategy.page
@@ -1,6 +1,9 @@
 - BW1:429: [Samuel Smith]() to [Thomas Truxtun](), 10 April 1801: "The Object of the squadron are instructions to our young Officers or to carry into Execution the Law fixing the Peace Establishment of the U. S. It is Concieved also that such a squadron Cruizing in view of the Barbary Powers will have a tendency to revent them from seizing on our commerce, whenever Passion or a desire of Plunder might Incite them thereto."
 
 # Purpose of cruises
+
+- Sec of State to [Tobias Lear](), 6 June 1804: "it was not only to over awe Tripoli, that the expense of equiping this Squadron was incurred, but upon a calculation of its salutary effect upon the other Regencies" (BW4:157)
+
 ## [Cruise 1 (Richard Dale)]()
 In the orders of this cruise, it seems pretty clear that the government feels it likely that the temporary declaration of war with Tripoli will be revoked by the time the squadron gets there; hence the couching of the orders mostly in terms of instruction and encouragement--the president and secretary of the navy genuinely think a blockade will not be necessary. (See BW1:471, Secretary of State to [Rufus King](), 21 May 1801)
 
